# siteswap-diagrams

./: .gitignore  LICENSE  README.md  package.yaml  siteswap.cabal  stack.yaml
src/: CLI.hs  Main.hs  Siteswap.hs
