name:                  siteswap
version:               0.1.0.0
synopsis:              Generate siteswap state diagrams
description:           Draw graphs representing siteswap states
                       and transitions.
license:               MIT
license-file:          LICENSE
author:                Patrick Herrmann
maintainer:            patrickwherrmann@gmail.com
copyright:             2015 Patrick Herrmann
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            https://github.com/patrickherrmann/siteswap-diagrams.git
  
executable siteswap
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Main
                       CLI
  build-depends:       base == 4.*,
                       mtl,
                       graphviz,
                       text,
                       optparse-applicative